--- a/index.html
+++ b/index.html
@@ -491,13 +491,15 @@
             <div class="plans__cards">
                 
                 <div class="plan__card">
-                    <h3 class="card__title">Starter</h3>
+                    <div class="card__title">
+                        <h3>Starter</h3>
+                    </div>
                     <div class="card__content">
                         <div class="price">
                             <div class="value">
                                 <span class="coin">R$</span>
-                                <span class="number">99,</span>
-                                <span class="cents">90</span>
+                                <span class="number">99</span>
+                                <span class="cents">,90</span>
                             </div>
                             <span class="info">/mês</span>
                         </div>
@@ -541,6 +543,116 @@
                         </div>
                     </div>
                     <span class="description">Ideal para pequenos negócios</span>
+                </div>
+
+                <div class="plan__card highlight">
+                    <div class="card__title">
+                        <h3>Business</h3>
+                    </div>
+                    <div class="card__content">
+                        <div class="price">
+                            <div class="value">
+                                <span class="coin">R$</span>
+                                <span class="number">149</span>
+                                <span class="cents">,90</span>
+                            </div>
+                            <span class="info">/mês</span>
+                        </div>
+                        <div class="list">
+                            <p class="item">
+                                <img src="assets/img/icon-check.svg" class="icon" alt="">
+                                1 Conexão
+                            </p>
+                            <p class="item">
+                                <img src="assets/img/icon-check.svg" class="icon" alt="">
+                                3 Usuários
+                            </p>
+                            <p class="item">
+                                <img src="assets/img/icon-check.svg" class="icon" alt="">
+                                3 Setores
+                            </p>
+                            <p class="item">
+                                <img src="assets/img/icon-check.svg" class="icon" alt="">
+                                Agendamento
+                            </p>
+                            <p class="item">
+                                <img src="assets/img/icon-check.svg" class="icon" alt="">
+                                Criador de automações: incluso 1 fluxo criado pela equipe de suporte
+                            </p>
+                            <p class="item">
+                                <img src="assets/img/icon-check.svg" class="icon" alt="">
+                                Integrações
+                            </p>
+                            <p class="item">
+                                <img src="assets/img/icon-check.svg" class="icon" alt="">
+                                Campanhas
+                            </p>
+                            <p class="item">
+                                <img src="assets/img/icon-no.svg" class="icon" alt="">
+                                DM Instagram Conectada
+                            </p>
+                            <p class="item">
+                                <img src="assets/img/icon-no.svg" class="icon" alt="">
+                                Api Externa
+                            </p>
+                        </div>
+                    </div>
+                    <span class="description">Perfeito para empresas em crescimento</span>
+                </div>
+
+                <div class="plan__card">
+                    <div class="card__title">
+                        <h3>Corporate</h3>
+                    </div>
+                    <div class="card__content">
+                        <div class="price">
+                            <div class="value">
+                                <span class="coin">R$</span>
+                                <span class="number">249</span>
+                                <span class="cents">,90</span>
+                            </div>
+                            <span class="info">/mês</span>
+                        </div>
+                        <div class="list">
+                            <p class="item">
+                                <img src="assets/img/icon-check.svg" class="icon" alt="">
+                                1 Conexão
+                            </p>
+                            <p class="item">
+                                <img src="assets/img/icon-check.svg" class="icon" alt="">
+                                3 Usuários
+                            </p>
+                            <p class="item">
+                                <img src="assets/img/icon-check.svg" class="icon" alt="">
+                                3 Setores
+                            </p>
+                            <p class="item">
+                                <img src="assets/img/icon-check.svg" class="icon" alt="">
+                                Agendamento
+                            </p>
+                            <p class="item">
+                                <img src="assets/img/icon-check.svg" class="icon" alt="">
+                                Criador de automações: incluso 1 fluxo criado pela equipe de suporte
+                            </p>
+                            <p class="item">
+                                <img src="assets/img/icon-check.svg" class="icon" alt="">
+                                Integrações
+                            </p>
+                            <p class="item">
+                                <img src="assets/img/icon-check.svg" class="icon" alt="">
+                                Campanhas
+                            </p>
+                            <p class="item">
+                                <img src="assets/img/icon-check.svg" class="icon" alt="">
+                                DM Instagram Conectada
+                            </p>
+                            <p class="item">
+                                <img src="assets/img/icon-check.svg" class="icon" alt="">
+                                Api Externa
+                            </p>
+                        </div>
+                    </div>
+                    <span class="description last">Para empresas que<br>exigem alto desempenho</span>
                 </div>
 
             </div>
