--- a/index.html
+++ b/index.html
@@ -659,6 +659,71 @@
         </div>
     </div>
 
+    <div class="page__faq" id="faq">
+        <div class="wrapper">
+            <h2 class="title">
+                Perguntas Frequentes
+                <img src="assets/img/title-detail.svg" class="icon__title" alt="">
+            </h2>
+
+            <div class="faq">
+
+                <details>
+                    <summary class="question">Como funciona?</summary>
+                    <p class="answer">Configure facilmente as perguntas e respostas que seus clientes receberão ao entrarem em contato. Assim que tudo estiver definido, o sistema assume o controle, respondendo automaticamente enquanto você dedica seu tempo a outras tarefas importantes.</p>
+                </details>
+
+                <details>
+                    <summary class="question">Eu posso perder minha conta?</summary>
+                    <p class="answer">
+                        Sim, especialmente se o número for novo. Esse risco geralmente acontece em dois cenários:<br>
+                        <br>
+                        <strong>SPAM:</strong> Se muitas pessoas marcarem suas mensagens como spam, sua conta pode ser suspensa. Para evitar isso, envie mensagens apenas para contatos que tenham um relacionamento com sua marca e que aceitem receber suas comunicações automáticas. Além disso, o WhatsApp pode interpretar como spam o envio excessivo de mensagens idênticas (validação de hash). Uma ótima estratégia para driblar esse problema é personalizar suas mensagens, mencionando o nome do destinatário no início. Exemplo:<br>
+                        <i>"Olá, {usuario.nome}, tudo bem?"</i> <br>
+                        <br>
+                        <strong>Falta de Engajamento:</strong> Quando muitas pessoas não leem ou não respondem suas mensagens dentro de 24 horas, o WhatsApp pode entender que seu número não é relevante. Para evitar isso:<br>
+                        <ul>
+                            <li>Mantenha sua lista de contatos limpa, removendo números que não interagem.</li>
+                            <li>Crie mensagens que incentivem a resposta, como perguntas diretas ou chamadas para ação (exemplo: um link para acessar algo exclusivo).</li>
+                        </ul>
+                        <br>
+                        <strong>Aviso importante:</strong> A Tech Chat não se responsabiliza por bloqueios de números. O uso da API é de responsabilidade do usuário, que deve seguir as diretrizes do WhatsApp e manter boas práticas de envio.
+                    </p>
+                </details>
+
+                <details>
+                    <summary class="question">Terei suporte para tirar dúvidas?</summary>
+                    <p class="answer">Sim! Nossa equipe está pronta para ajudar sempre que precisar. Se tiver qualquer dúvida, entre em contato conosco pelo WhatsApp e teremos o prazer de atender você.</p>
+                </details>
+
+                <details>
+                    <summary class="question">Funciona no celular ou apenas no PC?</summary>
+                    <p class="answer">Nosso sistema é totalmente baseado na web, o que significa que você pode acessá-lo de qualquer dispositivo, seja um computador ou um celular.</p>
+                </details>
+
+                <details>
+                    <summary class="question">Existe contrato ou multa por cancelamento?</summary>
+                    <p class="answer">Não. Na Tech Chat, todos os planos, sejam mensais ou anuais, podem ser cancelados a qualquer momento, sem taxas ou multas. Caso decida encerrar sua assinatura antes do fim do ciclo vigente, você ainda terá acesso à plataforma até o final do período já pago. Após isso, nenhuma nova cobrança será feita.</p>
+                </details>
+
+                <details>
+                    <summary class="question">Como faço para configurar o sistema?</summary>
+                    <p class="answer">A configuração é simples e intuitiva, permitindo que você comece a usar rapidamente. Mas caso precise de ajuda, nossa equipe de suporte está disponível no horário comercial para auxiliá-lo em qualquer etapa do processo.</p>
+                </details>
+
+                <details>
+                    <summary class="question">Qual é a capacidade máxima de atendentes?</summary>
+                    <p class="answer">A quantidade de atendentes disponíveis varia de acordo com o plano escolhido. Recomendamos que consulte os detalhes de cada plano antes da contratação ou entre em contato com nossa equipe para encontrar a melhor opção para suas necessidades.</p>
+                </details>
+
+                <details>
+                    <summary class="question">Posso personalizar as perguntas?</summary>
+                    <p class="answer">Sim! Você pode configurar o chat com perguntas e respostas personalizadas para atender melhor às necessidades dos seus clientes, tornando a comunicação mais eficiente e assertiva.</p>
+                </details>
+            </div>
+        </div>
+    </div>
+
     <a href="https://wa.me/5511997796354" class="float__whatsapp" target="_blank">
         <img src="assets/img/icon-whats.svg" alt="whatsapp">
     </a>
@@ -675,7 +740,7 @@
             loop: true,
             nav: false,
             dots: true,
-            stagePadding: 60,                      
+            stagePadding: 55,                      
                         
             responsive:{
                 0: {
