--- a/index.html
+++ b/index.html
@@ -720,6 +720,21 @@
                     <summary class="question">Posso personalizar as perguntas?</summary>
                     <p class="answer">Sim! Você pode configurar o chat com perguntas e respostas personalizadas para atender melhor às necessidades dos seus clientes, tornando a comunicação mais eficiente e assertiva.</p>
                 </details>
+
+                <details>
+                    <summary class="question">Afinal, o que é o Tech Chat?</summary>
+                    <p class="answer">O Tech Chat é uma solução de autoatendimento via web que permite que várias pessoas interajam simultaneamente com uma única conta do WhatsApp vinculada. Além disso, a plataforma oferece diversos recursos voltados para produtividade, colaboração da equipe e aprimoramento da comunicação com seus clientes. É uma ferramenta eficiente, intuitiva e de fácil configuração, permitindo que você comece a utilizá-la em poucos minutos.</p>
+                </details>
+
+                <details>
+                    <summary class="question">Quantos números posso conectar à plataforma?</summary>
+                    <p class="answer">Os planos disponíveis permitem a conexão de um único número, além de um limite de atendentes conforme a opção escolhida. Caso precise conectar mais de um número, entre em contato com nosso atendimento para conhecer as soluções personalizadas para sua necessidade.</p>
+                </details>
+
+                <details>
+                    <summary class="question">Por quanto tempo as mensagens ficam no sistema?</summary>
+                    <p class="answer">O histórico das conversas fica disponível no painel por um período de 12 meses. Esse prazo foi definido para garantir um equilíbrio entre a praticidade de acesso às mensagens recentes e a gestão eficiente dos dados armazenados.</p>
+                </details>
             </div>
         </div>
     </div>
