--- a/index.html
+++ b/index.html
@@ -739,6 +739,16 @@
         </div>
     </div>
 
+    <div class="page__testimonials" id="depoimentos">
+
+        <div class="bg-blue"></div>
+        <div class="bg-black"></div>
+        
+        <div class="wrapper">
+            
+        </div>
+    </div>
+
     <a href="https://wa.me/5511997796354" class="float__whatsapp" target="_blank">
         <img src="assets/img/icon-whats.svg" alt="whatsapp">
     </a>
