--- a/index.html
+++ b/index.html
@@ -745,7 +745,25 @@
         <div class="bg-black"></div>
         
         <div class="wrapper">
-            
+            <div class="heading">
+                <h2 class="title">
+                    Depoimentos
+                    <img src="assets/img/title-detail-2.svg" class="icon__title" alt="">
+                </h2>
+                <p class="subtitle">O que dizem sobre nós</p>
+            </div>
+            <div class="testimonials">
+                <div class="card__testimonial">
+                    <img src="assets/img/icon-quotes.svg" class="quotes" alt="">
+                    <p class="card__text">Estou utilizando o sistema e cada vez mais estou gostando e melhorando a nossa jornada de trabalho. Muito bom mesmo, eu recomendo!</p>
+                    <h3 class="card__name">Eder Torquato, Empresário</h3>
+                </div>
+                <div class="card__testimonial">
+                    <img src="assets/img/icon-quotes.svg" class="quotes" alt="">
+                    <p class="card__text">Desde que comecei a usar o Tech Chat, a comunicação com os clientes ficou muito mais ágil e organizada. O sistema é fácil de usar e tem ajudado bastante na rotina da equipe. Vale muito a pena!</p>
+                    <h3 class="card__name">Mariana Souza, Empresária</h3>
+                </div>
+            </div>
         </div>
     </div>
 
