--- a/index.html
+++ b/index.html
@@ -767,6 +767,18 @@
         </div>
     </div>
 
+    <div class="page__cta" id="contato">
+        <div class="wrapper">
+            <h2 class="cta__text">Leve seu atendimento ao próximo nível.<br>
+                Automatize, organize e agilize seu negócio.
+            </h2>
+            <a href="#" class="button">
+                <img src="assets/img/icon-whats.svg" class="icon" alt="Whatsapp">
+                ENTRE EM CONTATO
+            </a>
+        </div>
+    </div>
+
     <a href="https://wa.me/5511997796354" class="float__whatsapp" target="_blank">
         <img src="assets/img/icon-whats.svg" alt="whatsapp">
     </a>
