--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="theme-color" content="#">
 
-    <title></title>
+    <title>Tech Chat</title>
 
-    <meta name="description" content="Suporte e Helpdesk de Confiança para seu Negócio" />
-    <meta name="keywords" content="Suporte técnico, helpdesk, informática, soluções de TI, consultoria em TI, serviços de TI">
-    <meta name="author" content="ESC Informática Computer Solutions">
-    <meta itemprop="description" content="Suporte e Helpdesk de Confiança para seu Negócio">
-    <meta property="og:description" content="Suporte e Helpdesk de Confiança para seu Negócio" />
-    <link rel="canonical" href="link do site">
+    <meta name="description" content="Multi Atendimento Inteligente com Chat Automatizado" />
+    <meta name="keywords" content="Multi Atendimento, Chat Automatizado, Atendimento WhatsApp, Inteligência Artificial, Atendimento simultâneo, Atendimento automático">
+    <meta name="author" content="ESC Solutions Soluções Empresariais">
+    <meta itemprop="description" content="Multi Atendimento Inteligente com Chat Automatizado">
+    <meta property="og:description" content="Multi Atendimento Inteligente com Chat Automatizado" />
+    <link rel="canonical" href="http://lp1.escsistemas.com/">
     <meta name="robots" content="index, follow" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -58,7 +61,7 @@
                     </a>                   
                 </nav>
 
-                <a href="#" class="button" target="_blank">
+                <a href="https://techchat.escsistemas.com/" class="button" target="_blank">
                     <img src="assets/img/icon-user.svg" class="icon" alt="Usuário">
                     Já sou cliente
                 </a>
@@ -100,12 +103,12 @@
                                 </a>       
                             </nav>   
                             
-                            <a href="#" class="button" target="_blank">
+                            <a href="https://techchat.escsistemas.com/" class="button" target="_blank">
                                 <img src="assets/img/icon-user.svg" class="icon" alt="Usuário">
                                 Já sou cliente
                             </a>
 
-                            <a href="https://wa.me/" class="btn__whats" target="_blank">
+                            <a href="https://wa.me/5562998464374" class="btn__whats" target="_blank">
                                 <img src="assets/img/icon-whats.svg" class="icon" alt="Whatsapp">
                                 Entre em contato
                             </a>
@@ -124,13 +127,13 @@
                 <span>Multi Atendimento</span> Inteligente com Chat Automatizado
             </h2>
             <p class="description">Automatize interações, atenda vários clientes ao mesmo tempo e nunca perca uma <span>oportunidade de negócio.</span></p>
-            <a href="#" class="button">
+            <a href="#numeros" class="button">
                 Saiba mais
             </a>
         </div>
     </div>
 
-    <div class="page__numbers">
+    <div class="page__numbers" id="numeros">
         <div class="wrapper">
             <div class="info__box">
                 <p class="number">75%</p>
@@ -179,7 +182,7 @@
                         </div>
                     </div>
 
-                    <a href="#" class="button">
+                    <a href="https://wa.me/5562998464374" class="button" target="_blank">
                         <img src="assets/img/icon-whats.svg" class="icon" alt="Whatsapp">
                         Fale conosco
                     </a>
@@ -211,7 +214,7 @@
                         </div>
                     </div>
 
-                    <a href="#" class="button">
+                    <a href="https://wa.me/5562998464374" class="button" target="_blank">
                         <img src="assets/img/icon-whats.svg" class="icon" alt="Whatsapp">
                         Fale conosco
                     </a>
@@ -240,7 +243,7 @@
                         </div>
                     </div>
 
-                    <a href="#" class="button">
+                    <a href="https://wa.me/5562998464374" class="button" target="_blank">
                         <img src="assets/img/icon-whats.svg" class="icon" alt="Whatsapp">
                         Fale conosco
                     </a>
@@ -772,14 +775,64 @@
             <h2 class="cta__text">Leve seu atendimento ao próximo nível.<br>
                 Automatize, organize e agilize seu negócio.
             </h2>
-            <a href="#" class="button">
+            <a href="https://wa.me/5562998464374" class="button" target="_blank">
                 <img src="assets/img/icon-whats.svg" class="icon" alt="Whatsapp">
                 ENTRE EM CONTATO
             </a>
         </div>
     </div>
 
-    <a href="https://wa.me/5511997796354" class="float__whatsapp" target="_blank">
+    <footer class="page__footer">
+        <div class="footer__content">
+            <div class="wrapper">
+                <div class="heading">
+                    <img src="assets/img/logo-footer.svg" class="logo" alt="Tech Chat">
+                    <a href="https://wa.me/5562998464374" class="link__social" target="_blank">
+                        <img src="assets/img/icon-whats-2.svg" alt="whatsapp">
+                    </a>
+                </div>
+                <div class="nav__footer col--1">
+                    <a href="#inicio" class="nav__link">Início</a>
+                    <a href="#funcionalidades" class="nav__link">Funcionalidades</a>
+                    <a href="#vantagens" class="nav__link">Vantagens</a>
+                    <a href="#planos" class="nav__link">Planos</a>
+                </div>
+
+                <div class="nav__footer col--2">
+                    <a href="#faq" class="nav__link">FAQ</a>
+                    <a href="#depoimentos" class="nav__link">Depoimentos</a>
+                    <a href="#contatos" class="nav__link">Contatos</a>
+                </div>
+
+                <div class="contact">
+                    <a href="tel:62998464374" class="contact__link" target="_blank">
+                        <img src="assets/img/icon-phone.svg" class="icon" alt="Telefone">
+                        (62) 99846-4374
+                    </a>
+                    <a href="mailto:suporte@escinformaticago.com.br" class="contact__link" target="_blank">
+                        <img src="assets/img/icon-mail.svg" class="icon" alt="Email">
+                        suporte@escinformaticago.com.br
+                    </a>
+                    <a href="https://maps.app.goo.gl/Z9r5Gqm4cx3iJk2c9" class="contact__link" target="_blank">
+                        <img src="assets/img/icon-location.svg" class="icon" alt="Localização">
+                        Goiânia - GO
+                    </a>
+                </div>
+                
+                <p class="time">
+                    <img src="assets/img/icon-clock.svg" class="icon" alt="Horário">
+                    Seg a Sex<br>
+                    08:00 às 18:00
+                </p>
+            </div>
+        </div>
+
+        <div class="footer__copyrights">
+            <p class="copyright">ESC Sistemas 2025. Todos os direitos reservados.</p>
+        </div>
+    </footer>
+
+    <a href="https://wa.me/5562998464374" class="float__whatsapp" target="_blank">
         <img src="assets/img/icon-whats.svg" alt="whatsapp">
     </a>
 
