--- a/index.html
+++ b/index.html
@@ -564,15 +564,15 @@
                         <div class="list">
                             <p class="item">
                                 <img src="assets/img/icon-check.svg" class="icon" alt="">
-                                1 Conexão
+                                3 Conexões
                             </p>
                             <p class="item">
                                 <img src="assets/img/icon-check.svg" class="icon" alt="">
-                                3 Usuários
+                                7 Usuários
                             </p>
                             <p class="item">
                                 <img src="assets/img/icon-check.svg" class="icon" alt="">
-                                3 Setores
+                                7 Setores
                             </p>
                             <p class="item">
                                 <img src="assets/img/icon-check.svg" class="icon" alt="">
@@ -580,7 +580,7 @@
                             </p>
                             <p class="item">
                                 <img src="assets/img/icon-check.svg" class="icon" alt="">
-                                Criador de automações: incluso 1 fluxo criado pela equipe de suporte
+                                Criador de automações: incluso 2 fluxos criados pela equipe de suporte
                             </p>
                             <p class="item">
                                 <img src="assets/img/icon-check.svg" class="icon" alt="">
@@ -619,15 +619,15 @@
                         <div class="list">
                             <p class="item">
                                 <img src="assets/img/icon-check.svg" class="icon" alt="">
-                                1 Conexão
+                                Conexões ilimitadas
                             </p>
                             <p class="item">
                                 <img src="assets/img/icon-check.svg" class="icon" alt="">
-                                3 Usuários
+                                15 Usuários
                             </p>
                             <p class="item">
                                 <img src="assets/img/icon-check.svg" class="icon" alt="">
-                                3 Setores
+                                Setores ilimitados
                             </p>
                             <p class="item">
                                 <img src="assets/img/icon-check.svg" class="icon" alt="">
@@ -635,7 +635,7 @@
                             </p>
                             <p class="item">
                                 <img src="assets/img/icon-check.svg" class="icon" alt="">
-                                Criador de automações: incluso 1 fluxo criado pela equipe de suporte
+                                Criador de automações: incluso 3 fluxos criados pela equipe de suporte
                             </p>
                             <p class="item">
                                 <img src="assets/img/icon-check.svg" class="icon" alt="">
