--- a/index.html
+++ b/index.html
@@ -127,9 +127,10 @@
                 <span>Multi Atendimento</span> Inteligente com Chat Automatizado
             </h2>
             <p class="description">Automatize interações, atenda vários clientes ao mesmo tempo e nunca perca uma <span>oportunidade de negócio.</span></p>
-            <a href="#numeros" class="button">
-                Saiba mais
+            <a href="https://techchat.escsistemas.com/signup" class="button" target="_blank">
+                Teste Grátis
             </a>
+            <span class="button__info">*Teste Grátis por 7 dias</span>
         </div>
     </div>
 
@@ -658,6 +659,13 @@
                     <span class="description last">Para empresas que<br>exigem alto desempenho</span>
                 </div>
 
+            </div>
+
+            <div class="free-trial">
+                <h3 class="text">Faça um teste gratuito por 7 dias!</h3>
+                <a href="https://techchat.escsistemas.com/signup" class="button" target="_blank">
+                    Teste agora
+                </a>
             </div>
         </div>
     </div>
