--- a/index.html
+++ b/index.html
@@ -661,6 +661,22 @@
 
             </div>
 
+            <div class="setup">
+                <div class="card__title">
+                    <h3>Setup</h3>
+                </div>
+                <div class="card__content">
+                    <div class="price">
+                        <div class="value">
+                            <span class="coin">R$</span>
+                            <span class="number">600</span>
+                        </div>
+                        <span class="info">/ pagamento único</span>
+                    </div>
+                    <p class="description">O setup garante que seu sistema esteja <span>100% configurado</span> e pronto para uso, sem dores de cabeça. Nossa equipe cuida de tudo para que você possa focar no que realmente importa: o crescimento do seu negócio!</p>
+                </div>
+            </div>
+
             <div class="free-trial">
                 <h3 class="text">Faça um teste gratuito por 7 dias!</h3>
                 <a href="https://techchat.escsistemas.com/signup" class="button" target="_blank">
@@ -719,7 +735,7 @@
 
                 <details>
                     <summary class="question">Como faço para configurar o sistema?</summary>
-                    <p class="answer">A configuração é simples e intuitiva, permitindo que você comece a usar rapidamente. Mas caso precise de ajuda, nossa equipe de suporte está disponível no horário comercial para auxiliá-lo em qualquer etapa do processo.</p>
+                    <p class="answer">Ao contratar o setup nossa equipe cuida de tudo, garantindo que seu sistema esteja 100% configurado e pronto para uso.</p>
                 </details>
 
                 <details>
@@ -734,12 +750,12 @@
 
                 <details>
                     <summary class="question">Afinal, o que é o Tech Chat?</summary>
-                    <p class="answer">O Tech Chat é uma solução de autoatendimento via web que permite que várias pessoas interajam simultaneamente com uma única conta do WhatsApp vinculada. Além disso, a plataforma oferece diversos recursos voltados para produtividade, colaboração da equipe e aprimoramento da comunicação com seus clientes. É uma ferramenta eficiente, intuitiva e de fácil configuração, permitindo que você comece a utilizá-la em poucos minutos.</p>
+                    <p class="answer">O Tech Chat é uma solução de autoatendimento via web que permite que várias pessoas interajam simultaneamente com uma ou várias contas do WhatsApp vinculadas. Além disso, a plataforma oferece diversos recursos voltados para produtividade, colaboração da equipe e aprimoramento da comunicação com seus clientes. É uma ferramenta eficiente, intuitiva e de fácil configuração, permitindo que você comece a utilizá-la em poucos minutos.</p>
                 </details>
 
                 <details>
                     <summary class="question">Quantos números posso conectar à plataforma?</summary>
-                    <p class="answer">Os planos disponíveis permitem a conexão de um único número, além de um limite de atendentes conforme a opção escolhida. Caso precise conectar mais de um número, entre em contato com nosso atendimento para conhecer as soluções personalizadas para sua necessidade.</p>
+                    <p class="answer">A quantidade de números que podem ser conectados será conforme o plano contratado. Caso precise conectar uma quantidade de números especifica, entre em contato com nosso atendimento para conhecer as soluções personalizadas para sua necessidade.</p>
                 </details>
 
                 <details>
